--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,11 +60,24 @@ jobs:
       - name: Test with Xcode 11.4
         run: ./xcode_test.sh Xcode_11.4.1
 
-  linux-5_0:
+  linux-5_1:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
 
-      - uses: docker://swift:5.1.5
-        run: swift test
+      - name: Test on Linux with Swift 5.1
+        uses: Didstopia/SwiftAction@v1.0.1
+        with:
+          swift-action: "test"
+
+  linux-5_2:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Test on Linux with Swift 5.2
+        uses: Didstopia/SwiftAction@v1.0.2
+        with:
+          swift-action: "test"
