--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Test on Linux with Swift 5.1
         uses: Didstopia/SwiftAction@v1.0.1
         with:
-          swift-action: "test"
+          swift-action: test --enable-test-discovery
 
   linux-5_2:
     runs-on: ubuntu-latest
@@ -80,4 +80,4 @@ jobs:
       - name: Test on Linux with Swift 5.2
         uses: Didstopia/SwiftAction@v1.0.2
         with:
-          swift-action: "test"
+          swift-action: test --enable-test-discovery
