--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,19 +1,15 @@
 disabled_rules:
-- trailing_comma
-- identifier_name
-- void_return
-- operator_whitespace
-- nesting
-- cyclomatic_complexity
+  - trailing_comma
+  - identifier_name
+  - void_return
+  - operator_whitespace
+  - nesting
+  - cyclomatic_complexity
 
-line_length:
-- 80
-- 100
-- ignores_comments
-
+line_length: 100
 
 function_body_length:
-- 50
+  - 50
 
 included:
   - Sources
