--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,12 +3,12 @@
 name: CI
 
 # Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+# events but only for the `main` branch
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -59,6 +59,33 @@ jobs:
 
       - name: Test with Xcode 11.4
         run: ./xcode_test.sh Xcode_11.4.1
+
+  xcode-11_5:
+    runs-on: macos-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Test with Xcode 11.5
+        run: ./xcode_test.sh Xcode_11.5
+
+  xcode-11_6:
+    runs-on: macos-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Test with Xcode 11.6
+        run: ./xcode_test.sh Xcode_11.6
+
+  xcode-11_7:
+    runs-on: macos-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Test with Xcode 11.7
+        run: ./xcode_test.sh Xcode_11.7
 
   linux-5_1:
     runs-on: ubuntu-latest
