--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,102 +8,72 @@ on:
   push:
     branches: [main]
   pull_request:
-    branches: [main]
+    branches: "*"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  xcode-11_2:
-    runs-on: macos-latest
+  macos_build:
+    strategy:
+      matrix:
+        include:
+          - xcode: "11.7" # Swift 5.2
+            macOS: "10.15"
+            useCodecov: "false"
+          - xcode: "12.4" # Swift 5.3
+            macOS: "10.15"
+          - xcode: "12.5.1" # Swift 5.4
+            macOS: "11.0"
+          - xcode: "13.1" # Swift 5.5
+            macOS: "11.0"
+          - xcode: "13.4.1" # Swift 5.6
+            macOS: "12"
+
+    runs-on: macos-${{ matrix.macOS }}
+    name: Build with Xcode ${{ matrix.xcode }} on macOS ${{ matrix.macOS }}
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Test with Xcode 11.2
-        run: ./xcode_test.sh Xcode_11.2.1
+      - name: Build with Xcode ${{ matrix.xcode }}
+        run: ./xcode_test.sh Xcode_${{ matrix.xcode }}
 
-  xcode-11_3:
-    runs-on: macos-latest
+  linux_build:
+    strategy:
+      matrix:
+        swift:
+          - "5.1"
+          - "5.2"
+          - "5.3"
+          - "5.4"
+          - "5.5"
+          - "5.6"
 
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Test with Xcode 11.3
-        run: ./xcode_test.sh Xcode_11.3.1
-
-  xcode-11_4:
-    runs-on: macos-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Test with Xcode 11.4
-        run: ./xcode_test.sh Xcode_11.4.1
-
-  xcode-11_5:
-    runs-on: macos-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Test with Xcode 11.5
-        run: ./xcode_test.sh Xcode_11.5
-
-  xcode-11_6:
-    runs-on: macos-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Test with Xcode 11.6
-        run: ./xcode_test.sh Xcode_11.6
-
-  xcode-11_7:
-    runs-on: macos-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Test with Xcode 11.7
-        run: ./xcode_test.sh Xcode_11.7
-
-  xcode-12_0:
-    runs-on: macos-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Test with Xcode 12.0
-        run: ./xcode_test.sh Xcode_12
-
-  linux-5_1:
     runs-on: ubuntu-latest
-
+    container:
+      image: swift:${{ matrix.swift }}
     steps:
       - uses: actions/checkout@v2
+      - name: Run tests
+        run: swift test --enable-test-discovery
 
-      - name: Test on Linux with Swift 5.1
-        uses: Didstopia/SwiftAction@v1.0.1
-        with:
-          swift-action: test --enable-test-discovery
+  windows_build:
+    strategy:
+      matrix:
+        swift:
+          - "5.5"
+          - "5.6"
 
-  linux-5_2:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Test on Linux with Swift 5.2
-        uses: Didstopia/SwiftAction@v1.0.2
-        with:
-          swift-action: test --enable-test-discovery
-
-  linux-5_3:
-    runs-on: ubuntu-latest
+    runs-on: windows-2019
 
     steps:
+      - name: Set git to use LF
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
       - uses: actions/checkout@v2
-
-      - name: Test on Linux with Swift 5.3
-        uses: Didstopia/SwiftAction@v1.0.3
+      - uses: MaxDesiatov/swift-windows-action@v1
         with:
-          swift-action: test --enable-test-discovery
+          shell-action: swift build
+          swift-version: ${{ matrix.swift }}
+      - name: Run tests
+        run: swift test --enable-test-discovery
